--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Hello World</title>
   </head>
+<body>
+<!--> Underneath is the header<-->
+<h1 style="background-color:DodgerBlue;text-align:center;font-family:verdana;color:white;font-size:300%;" >Hello World</h1>
+<!--> All the text in the world <-->
+<p style="text-align:center;">
+By the best in the wild west, Bryson.
+Anyways welcome to my website, have a great time!
+Afterall it ain't great but it's honest work.
+</p>
 
-  <body>
-    <h1>Hello, World!</h1>
-  </body>
-  
+<p>
+  Totally didn't make most of the changes on my first site
+  Oh yeah and also I'll be swapping to a second LINKED site
+  for some of the newer work
+</p>
 </html>
