--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ By the best in the wild west, Bryson.
 Anyways welcome to my website, have a great time!
 Afterall it ain't great but it's honest work.
 </p>
-
+<a href="aboutme.html">
+  <img src="./pixil-frame-0.png" alt="alternatetext" style="width:600px;height:450px;">
+</a>
 <p>
   Totally didn't make most of the changes on my first site
   Oh yeah and also I'll be swapping to a second LINKED site
