--- a/index.html
+++ b/index.html
@@ -20,4 +20,5 @@ Afterall it ain't great but it's honest work.
   Oh yeah and also I'll be swapping to a second LINKED site
   for some of the newer work
 </p>
+</body>
 </html>
