--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <title>Hello World</title>
   </head>
 <body>
+  
+body {
+  background-color: linen;
+}
+
+h1 {
+  color: white;
+  margin-left: 75px;
+}
+
 <!--> Underneath is the header<-->
-<h1 style="background-color:DodgerBlue;text-align:center;font-family:verdana;color:white;font-size:300%;" >Hello World</h1>
+<h1 style="font-family:verdana;font-size:300%;" >Hello World</h1>
 <!--> All the text in the world <-->
 <p style="text-align:center;">
 By the best in the wild west, Bryson.
