--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 By the best in the wild west, Bryson.
 Anyways welcome to my website, have a great time!
 Afterall it ain't great but it's honest work.
-Welcome to my website! 
+Welcome to my website! Oh yeah and here's the image
 </p>
+<img src="./pixil-frame-0.png" alt="alternatetext" style="width:150;height:125px;">
 </body>
 </html>
