--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <link rel="stylesheet" href="mystyle.css">
 <html>
   <head>
+    <meta name="description" content="A+ Tier webpage that is beautiful and amazing and perfect.>
+    <meta name="keywords" content="Welcome to my website.">
+    <meta name="author" content="Bryson.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
   </head>
 <body>
